kubernetes/03_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-simonweald-com
  namespace: shw
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: www-simonweald-com
    hosts: 
    - www.simonweald.com
  rules:
  - host: www.simonweald.com
    http:
      paths:
      - backend:
          serviceName: simonweald-com
          servicePort: 80
